# rl-game-engines

./: .gitignore
connect4/: README.md  bench_cycle.ps1  check_cuda.py  config.py  pipeline.conf.ps1.bak  run_pipeline.ps1  setup.ps1
connect4/docs/: architecture.md  benchmark.md
connect4/src_python/: dataset.py  gui.py  init.py  model.py  requirements.txt  train.py
connect4/src_rust/: Cargo.toml
connect4/src_rust/src/: bitboard.rs  main.rs  mcts.rs  network.rs
connect4/todo/: 2026-07-08_initial-implementation.md
